--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "budo index.js --live",
-    "build": "mkdir -p build && browserify index.js > ./build/bundle.js && create-html --title 'choo-scriber' --body '<div></div>' --script bundle.js --output ./build/index.html"
+    "build-folder": "mkdir -p build",
+    "build-bundle.js": "browserify index.js > ./build/bundle.js",
+    "build-index.html": "create-html -t 'choo-scriber' -b '<div></div>' -s bundle.js -o ./build/index.html",
+    "build": "npm run -s build-folder & npm run -s build-bundle.js & npm run -s build-index.html"
   },
   "author": "zhouhansen <z308114274@gmail.com>",
   "license": "MIT",
