--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "yuki-createjs": "0.0.3"
   },
   "devDependencies": {
+    "bel": "^5.1.3",
     "brfs": "^1.4.3",
     "browserify": "^14.4.0",
     "budo": "^10.0.4",
-    "create-html": "^4.0.0",
     "mkdirp": "^0.5.1",
     "uglifyify": "^4.0.4"
   },
