--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "choo-scriber",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "scriber powered by choo",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "brfs": "^1.4.3",
     "browserify": "^14.4.0",
     "budo": "^10.0.4",
+    "colors": "^1.1.2",
     "mkdirp": "^0.5.1",
     "uglifyify": "^4.0.4"
   },
