--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "choo-scriber",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "scriber powered by choo",
   "main": "index.js",
   "scripts": {
@@ -14,32 +14,29 @@
     "choo": "^6.0.1",
     "jquery": "^3.2.1",
     "sheetify": "^6.2.0",
-    "sheetify-cssnext": "^1.0.7",
     "spinkit": "^1.2.5",
     "yuki-createjs": "0.0.3"
   },
   "devDependencies": {
+    "base64-img": "^1.0.3",
     "bel": "^5.1.3",
-    "brfs": "^1.4.3",
     "browserify": "^14.4.0",
     "budo": "^10.0.4",
     "colors": "^1.1.2",
+    "html-minifier": "^3.5.5",
     "mkdirp": "^0.5.1",
-    "uglifyify": "^4.0.4"
+    "sheetify-inline": "^1.0.6",
+    "sheetify-cssnext": "^1.0.7"
   },
   "browserify": {
     "transform": [
       [
         "sheetify",
         {
-          "u": "sheetify-cssnext"
+          "u": [
+            "sheetify-cssnext"
+          ]
         }
-      ],
-      [
-        "uglifyify"
-      ],
-      [
-        "brfs"
       ]
     ]
   }
