--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "choo-scriber",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "scriber powered by choo",
   "main": "index.js",
   "scripts": {
@@ -25,8 +25,8 @@
     "colors": "^1.1.2",
     "html-minifier": "^3.5.5",
     "mkdirp": "^0.5.1",
-    "sheetify-inline": "^1.0.6",
-    "sheetify-cssnext": "^1.0.7"
+    "sheetify-cssnext": "^1.0.7",
+    "sheetify-inline": "^1.0.8"
   },
   "browserify": {
     "transform": [
