--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
   "dependencies": {
     "bankai": "^9.0.0-rc8",
     "bootstrap": "4.0.0-beta.2",
+    "buffer-graph": "^4.0.0",
     "choo": "^6.4.2",
+    "clean-css": "^4.1.9",
     "concat-stream": "^1.6.0",
     "css-extract": "^1.2.0",
     "dedent": "^0.7.0",
     "exorcist": "^1.0.0",
     "jquery": "^3.2.1",
     "nanocomponent": "^6.4.2",
+    "purify-css": "^1.2.5",
     "sheetify": "^6.2.0",
     "spinkit": "^1.2.5",
     "standard": "^10.0.3",
-    "tinyify": "^2.2.0",
     "yuki-createjs": "0.0.3"
   },
   "devDependencies": {
