--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "concat-stream": "^1.6.0",
     "css-extract": "^1.2.0",
     "dedent": "^0.7.0",
+    "documentify": "^3.0.0",
     "exorcist": "^1.0.0",
+    "hyperstream": "^1.2.2",
+    "inline-critical-css": "^1.1.0",
     "jquery": "^3.2.1",
     "nanocomponent": "^6.4.2",
+    "pump": "^1.0.2",
     "purify-css": "^1.2.5",
     "sheetify": "^6.2.0",
     "spinkit": "^1.2.5",
