--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "license": "MIT",
   "dependencies": {
     "bankai": "^9.0.0-rc8",
-    "bootstrap": "4.0.0-beta.2",
     "budo": "^10.0.4",
     "buffer-graph": "^4.0.0",
     "choo": "^6.4.2",
@@ -34,8 +33,8 @@
     "pump": "^1.0.2",
     "purify-css": "^1.2.5",
     "sheetify": "^6.2.0",
-    "spinkit": "^1.2.5",
     "standard": "^10.0.3",
+    "tachyons": "^4.9.0",
     "yuki-createjs": "0.0.3"
   },
   "devDependencies": {
