--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "budo index.js --live",
+    "serve": "node server/index.js",
     "build": "node build.js",
     "codeStyleFix": "standard --fix"
   },
@@ -32,6 +33,7 @@
     "nanocomponent": "^6.4.2",
     "pump": "^1.0.2",
     "purify-css": "^1.2.5",
+    "send": "^0.16.1",
     "sheetify": "^6.2.0",
     "standard": "^10.0.3",
     "tachyons": "^4.9.0",
